--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,3 +20,9 @@ body {
   color: rgb(var(--foreground-rgb));
   background: whitesmoke;
 }
+
+@layer components {
+  .button {
+    @apply px-2 py-2 border rounded-full cursor-pointer hover:shadow-lg active:scale-95 active:bg-gray-100 transition duration-100 ease-out;
+  }
+}
